Jun 2, 2016 - chris ---------------------------------------------------
o Fixed another bug in the duplicate key consolidation

Jun 1, 2016 - chris ---------------------------------------------------
o Fixed a bug in the duplicate key consolidation

May 29, 2016 - chris ---------------------------------------------------
o issue #80: fixed streamvbyte compilation for c++11

May 04, 2016 - chris ---------------------------------------------------
o issue #79: fixed crc32 failure when reusing deleted blobs spanning
	multiple pages

Apr 27, 2016 - chris ---------------------------------------------------
o Fixed a bug when recovering duplicates that were inserted with one of the
	UPS_DUPLICATE_INSERT_* flags

Apr 26, 2016 - chris ---------------------------------------------------
o The integer compression codecs UPS_COMPRESSOR_UINT32_GROUPVARINT and
	UPS_COMPRESSOR_UINT32_STREAMVBYTE are now deprecated
o The integer compression codec UPS_COMPRESSOR_UINT32_MASKEDVBYTE is now a
	synonym for UPS_COMPRESSOR_UINT32_VARBYTE, but uses the MaskedVbyte
	library under the hood.

Apr 19, 2016 - chris ---------------------------------------------------
o Improved the journalling performance

Mar 20 2016 - chris ---------------------------------------------------
                      release of upscaledb-2.2.0

Mar 17, 2016 - chris ---------------------------------------------------
o issue #75: fixed compilation for platforms w/o SSE (thanks, MrApe)

Mar 14, 2016 - chris ---------------------------------------------------
o issue #74: fixed ups_import for databases with record numbers
	(thanks, mjmckp)

Mar 01 2016 - chris ---------------------------------------------------
o ups_cursor_get_record_size: size is now uint32_t* instead of uint64_t*

Feb 29 2016 - chris ---------------------------------------------------
o issue #71: fixed growing journal file (thanks, Hitoshi Yonemichi)

Feb 26 2016 - chris ---------------------------------------------------